--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ python/main.py
 python/test.py
 python/__pycache__/node.cpython-313.pyc
 python/__pycache__/AddTwoNumbers.cpython-313.pyc
+python/benchmark.py
+python/__pycache__/LongestSubstring.cpython-313.pyc
